# live-transcription

./: .env.example  .gitignore  README.md
backend/: pyproject.toml
backend/app/: main.py
backend/app/api/routes/: session.py
backend/app/contracts/: events.py  session.py
backend/app/core/: __init__.py  config.py  logging_config.py
backend/app/services/: session_manager.py
backend/app/services/audio/: __init__.py  base.py  composite_capture.py  device_service.py  sounddevice_capture.py  system_audio_capture.py  system_audio_provider.py
backend/app/services/coaching/: __init__.py  llm_client.py  nudge_service.py  prompt_builder.py  rule_engine.py  summary_service.py
backend/app/services/debug/: __init__.py  debug_store.py
backend/app/services/diarization/: __init__.py  base.py  nemo_diarizer.py  (+1 more)
backend/config/personas/: colleague_contact.yaml  manager.yaml
backend/config/rules/: default.yaml
backend/live_transcription_demo_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
backend/scripts/: benchmark_nemo_streaming.py  nemo_streaming_worker.py  parakeet_unified_streaming_worker.py
backend/tests/api/: test_health.py  test_session_ws.py
backend/tests/contracts/: test_events.py
backend/tests/core/: test_logging_config.py
backend/tests/fakes/: fake_capture.py  fake_diarizer.py  fake_provider.py
backend/tests/integration/: test_diarization_toggle.py  test_live_nudges.py  test_mode1_pipeline.py  test_mode2_pipeline.py  test_transcription_reconfigure.py
backend/tests/scripts/: test_benchmark_nemo_streaming.py
(+78 files in other folders)
